Update querydsl dependency.

--- a/pom.xml
+++ b/pom.xml
@@ -281,7 +281,7 @@
     <dependency>
       <groupId>org.everit.jira</groupId>
       <artifactId>jira-querydsl-support</artifactId>
-      <version>1.0.2-SNAPSHOT</version>
+      <version>1.0.2</version>
     </dependency>
     <dependency>
       <groupId>com.atlassian.jira</groupId>
